--- a/index/index.css
+++ b/index/index.css
@@ -271,9 +271,10 @@ footer article p {
 }
 
 .articleFooter {
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
+    justify-items: center;
 }
 
 .articleFooter img{
